--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             data(){
                 return{
                     imageSrc:'house.jpg',
-                    imageSrc1:'D:\house2.jpg',
+                    imageSrc1:'house2.jpg',
                     title:'VUE APP',
                     style1:'welcome',
                     home:'index.html'
