--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <a v-bind:href="home">Home</a><br>
         <img v-bind:src="imageSrc" alt="Product Image">
         <img v-bind:src="imageSrc1" alt="Product Image">
-        <h2 v-bind:class="style1">welcome to HAIP</h2>
+        <h2 v-bind:class="style1">welcome to BTECH HUYE</h2>
         
 
     </div>
